--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <hr>
 
+<br>
+
 <div class="sect">
 
     <div class="first-sec">
@@ -50,7 +52,9 @@
         <p class="sect-three">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas beatae architecto vitae expedita sit soluta laborum vero, placeat iste exercitationem eaque, accusantium illo. Ex, cum atque exercitationem fugit et nobis.</p>
     </div>
 
-</div>
+</div> <br>
+
+<br>
 
 <div class="contact-us">
     <h2>Let's build your next house!</h2>
@@ -66,6 +70,7 @@
 <a class="footer-link" href="https://linkedin.com/in/abdul-lateef-sidi-ali-180b41155"><img class="linkedin" src="Media/linked.png" alt=""></a>
 <a class="footer-link" href="https://twitter.com/lateeftheshyboy"><img class="twitter" src="Media/twits.png" alt=""></a>
 <a class="footer-link" href="https://wa.link/gtfexz"><img class="whatsapp" src="Media/whats.png" alt=""></a>
+    <br>
 <p class="end">© 2021 Abdul-Lateef Folorunsho Sidi-Ali.</p>
 </div>
 
