--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <a class="footer-link" href="https://twitter.com/lateeftheshyboy"><img class="twitter" src="Media/twits.png" alt=""></a>
 <a class="footer-link" href="https://wa.link/gtfexz"><img class="whatsapp" src="Media/whats.png" alt=""></a>
     <br>
-<p class="end">© 2021 Abdul-Lateef Folorunsho Sidi-Ali.</p>
+<p class="end">© 2021 Architect Oluwaseun Babalola.</p>
 </div>
 
 </body>
