--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 <div class="first-div">
-    <h3 class="sec-h"> Nigeria's No 1 Construction Firm </h3>
+    <h3 class="sec-h"> Nigeria's No. 1 Construction Firm </h3>
     <img class="archi" src="Media/arch.jpg" alt="Construction Img">
 </div>
 
