--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Saofant Projects</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="header">
