--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#">Home</a>
         <a href="#">Projects</a>
         <a href="#">Gallery</a>
-        <a href="Saofant\links\team.html">Team</a>
+        <a href="Saofant/links/team.html">Team</a>
         <a href="#">About Us</a>
         <input type="text" placeholder="Search..">
     </div>
