--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#">Projects</a>
         <a href="#">Gallery</a>
         <a href="https://lateeftheshyboy.github.io/Saofant/links/team.html">Team</a>
-        <a href="#">About Us</a>
+        <a href="https://lateeftheshyboy.github.io/Saofant/links/about-us.html">About Us</a>
         <input type="text" placeholder="Search..">
     </div>
 </div>
