Update and rename contact.html to about-us.html

--- a/links/about-us.html
+++ b/links/about-us.html
@@ -7,8 +7,9 @@
     <title>Contact us</title>
 </head>
 <body>
-    <h1>Contact Us</h1>
-    <form>
+    <h1>About Us</h1>
+    
+    <!--<form>
         <p>Please fill in the appropriate information below</p>
        Name: <br> <input><br>
        Email Address: <br> <input><br>
@@ -17,9 +18,8 @@
        Optional Message: <br> <input><br>
        <br>
      <button>Submit</button>
-    </form>
-
-
-    <a href="C:\Users\User_2\Desktop\Saofant\Saofant.html  ">Back to home</a>
+    </form> 
+    <a href="C:\Users\User_2\Desktop\Saofant\Saofant.html  ">Back to home</a>-->
+    
 </body>
 </html>
