--- a/links/team.html
+++ b/links/team.html
@@ -2,11 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Saofant Team</title>
+    <link rel="stylesheet" href="team.css">
+    <title>Meet the team</title>
 </head>
 <body>
-    <h3> MEET THE TEAM </h3>   
+    <h2> MEET THE TEAM </h2>
+    <P>The Saofant Project team is a small team of 5 serious minded people with a view to changing construction, globally.</P>
+    <div class="team">
+        <div class="ceo">
+            <p> Architect Oluwaseun Babalola is the CEO and principal partner at Saofant <br>
+            at Saofant Project Limited. He is a graduate of Architecture from the <br>
+            prestigious Federal University of Technology, Akure (FUTA). Ever since his <br>
+            graduation, Architect Babalola has gone on to execute countless construction <br>
+            projects (private and public). <br>
+            When he is not drawing or supervising a project, he is having a good time with <br>
+            friends. He is happily married to a beautiful woman and they have two smart kids.</p>
+            <figure>
+            </figure>
+        </div>
+        <div class="coo">
+            <p>Mrs. Bukola Seun-Babalola is the Chief Operating Officer and managing partner at <br>
+            Saofant Projects. She is in charge of running the company's daily affairs. <br>
+            Mrs. Babalola is happily married to Architect Babalola. </p>
+        </div> 
+        <div class="finance"></div>
+        <div class="audit"></div>
+        <div class="tech"></div>
+    </div>
 </body>
 </html>
