--- a/links/team.html
+++ b/links/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="https://lateeftheshyboy.github.io/Saofant/team.css">
     <title>Meet the team</title>
 </head>
 <body>
