--- a/links/team.html
+++ b/links/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://lateeftheshyboy.github.io/Saofant/links/team.css">
+    <link rel="stylesheet" href="team.css">
     <title>Meet the team</title>
 </head>
 <body>
@@ -11,7 +11,8 @@
     <P>The Saofant Project team is a small team of 5 serious minded people with a view to changing construction, globally.</P>
     <div class="team">
         <div class="ceo">
-            <p> Architect Oluwaseun Babalola is the CEO and principal partner at Saofant <br>
+            <p> <b> ARCHITECT OLUWASEUN BABALOLA </b> <br>
+            Architect Oluwaseun Babalola is the CEO and principal partner at Saofant <br>
             at Saofant Project Limited. He is a graduate of Architecture from the <br>
             prestigious Federal University of Technology, Akure (FUTA). Ever since his <br>
             graduation, Architect Babalola has gone on to execute countless construction <br>
@@ -19,6 +20,7 @@
             When he is not drawing or supervising a project, he is having a good time with <br>
             friends. He is happily married to a beautiful woman and they have two smart kids.</p>
             <figure>
+                <img class="dadd" src="Daddy.jpg" alt="">
             </figure>
         </div>
         <div class="coo">
