--- a/links/team.html
+++ b/links/team.html
@@ -20,7 +20,7 @@
             When he is not drawing or supervising a project, he is having a good time with <br>
             friends. He is happily married to a beautiful woman and they have two smart kids.</p>
             <figure>
-                <img class="dadd" src="Media/Daddy.jpg" alt="">
+                <img class="dadd" src="https://lateeftheshyboy.github.io/Saofant/Media/Daddy.jpg" alt="">
             </figure>
         </div>
         <div class="coo">
